# rp2040_rust_clion_template

./: Cargo.toml  Embed.toml  README.md  cargo-generate.toml
src/: main.rs
